--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
       <scope>test</scope>
     </dependency>
 <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.32</version>
+    <scope>provided</scope>
+</dependency>
+<dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-core</artifactId>
     <version>7.0.0-M6</version>
